@@ -3,6 +3,7 @@
 -------------------------------------------------
 - base/waitcallback: fixed a severe bug
 - os/gwentime: changed some arguments to const
+- base/idlist: fixed a severe bug
 
 
 2004/08/02: Martin Preuss<martin@libchipcard.de>
